# check-commit-message

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
check_commit_message/: main.py
