# setup.cfg
[metadata]
name = check-commit-message
description = Check your git commit message as prefix of the git branch name
version = 0.1.0
author = Sayed Raianul Kabir
author_email = raianul.kabir@gmail.com
license = MIT


[options]
packages = find:

[options.entry_points]
console_scripts =
    check-commit-message = check_commit_message.main:main